[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ArmorBase_Script.gd" type="Script" id=1]

[node name="Armor_BaseNode" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Head_Armor" type="Node2D" parent="." index="0"]

z_index = 3
_sections_unfolded = [ "Z Index" ]

[node name="Chest_Armor" type="Node2D" parent="." index="1"]

z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="Leg_Armor" type="Node2D" parent="." index="2"]


